--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,13 @@
     <!-- ICONS -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
  
+    <!-- <link rel="stylesheet" href="style.css"> -->
     
-    <link rel="stylesheet" href="style.css">
   </head>
   <body>
  
     <div id="root"></div>
-    <i class="far fa-caret-square-left"></i>
+ 
 
   </body>
 </html>
